--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,11 +3,29 @@
   <head>
     <meta charset="utf-8">
     <title>Meadowlark Travel</title>
+    {{#if showTests}}
+      <link rel="stylesheet" href="/vendor/mocha.css" media="screen">
+    {{/if}}
+    <script src="//code.jquery.com/jquery-2.0.2.min.js"></script>
   </head>
   <body>
     <header>
       <img src="/images/js.png" alt="" />
     </header>
     {{{body}}}
+    {{#if showTests}}
+      <div id="mocha"></div>
+      <script src="/vendor/mocha.js"></script>
+      <script src="/vendor/chai.js"></script>
+      <script>
+        mocha.ui('tdd');
+        var assert = chai.assert;
+      </script>
+      <script src="/qa/tests-global.js"></script>
+      {{#if pageTestScript}}
+        <script src="{{pageTestScript}}"></script>
+      {{/if}}
+      <script>mocha.run();</script>
+    {{/if}}
   </body>
 </html>
